name:                elliptic
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/elliptic#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2020 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Carlson
                     , Elliptic
  other-modules:       Internal
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010
  ghc-options:         -Wall

test-suite unit-tests
  type:                 exitcode-stdio-1.0
  main-is:              Main.hs
  hs-source-dirs:       tests/
  other-modules:        Approx
  Build-Depends:        base >= 4.7 && < 5
                      , tasty
                      , tasty-hunit
                      , elliptic
  Default-Language:     Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/elliptic
